# OCR

./: .example.env  .gitignore  .gitlab-ci.yml  README.md  backend.dockerfile  deployProject.sh  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  gunicorn_conf.py  publishProject.sh  requirement.txt  vscode.env
app/: .env  celerybeat-schedule  example.env  initial_fake_data.py  pyproject.toml  worker-start.sh
app/alembic/: env.py
app/alembic/versions/: 0065a55c09bc_equipment_model.py  058a6339167c_pricing_fee_fields.py  062b54e831e6_model_image.py  087eecd32228_add_events_into_notifications.py  0a1f1094aaf7_model_parking.py  0abbceea8f6c_add_user_id_into_transaction.py  0d3dbb238810_parking_payment_type.py  0d86c5440ccd_.py  0e8cc191ac62_add_column_entrance_fee_and_hourly_fee_.py  112ab03ed0fd_parking.py  1558e7983cf1_acl.py  17fb36974ca4_fix_duplicate_name_table_plate_detected.py  201935381731_add_is_active_into_equipment.py  217829808cec_add_column_bill_type_into_bill.py  29c8009fedb0_add_table_paymentbill.py  2bbc6bb98751_change_bill.py  2bcfbc91ed4e_add_filed_record_id_into_bill.py  2d08b062ee73_change_table_name_table_ticket.py  2e105cb60f58_add_trgm_index.py  2e3a3aecbb28_set_status_record.py  2e3e3ad5fd3a_change_user_email_to_username.py  2fd483278b5a_delete_column_expire_start_and_end_into_.py  331633976966_column_price_model_in_plate.py  34d622869c71_add_column_vehicle_color_and_model_into_.py  36505e99d2c8_add_table_notification.py  3794f0a04522_model_user.py  37d5b7f39a39_add_column_path_image.py  39af89508414_add_column_additional_data_into_ticket.py  39f2313e7e15_rename_parking_to_parkinglot.py  3c3539da3cdf_fix.py  3da388379c2a_.py  414c16dd262c_create_table_price.py  430cd0aa407b_add_rrn_number_into_transaction.py  433b7513ea3b_change_price.py  462d32d047f7_fix_datetime.py  462f5e2cb45b_parkingzoneprice_model.py  46461e3f86b5_delete_payment_and_relation_by_bill_add_.py  464abf49d5ff_fix.py  46bc4703a244_column_price_model_in_record.py  46d585df0623_model_records.py  (+95 more)
app/app/: .env  exceptions.py  main.py
app/app/acl/: role.py  role_checker.py
app/app/api/: deps.py  docs.py  route.py
app/app/api/api_v1/: api.py
app/app/api/endpoints/: camera.py  events.py  images.py  parking.py  plates.py  price.py  records.py  users.py  utils.py
app/app/api/services/: parking_services.py  records_services.py
app/app/bill/: repo.py  router.py
app/app/bill/api/: bill.py
app/app/bill/models/: __init__.py  bill.py
app/app/bill/schemas/: bill.py
app/app/bill/services/: bill.py
app/app/core/: celery_app.py  config.py  enums.py  exceptions.py  fake_data.py  security.py
app/app/core/middleware/: get_accept_language_middleware.py
app/app/crud/: __init__.py  base.py  crud_camera.py  crud_event.py  crud_image.py  crud_parking.py  crud_plate.py  crud_price.py  crud_record.py  crud_user.py
app/app/db/: base_class.py  init_data_fake.py  init_db.py  session.py
app/app/error_reports/: api.py  models.py  repo.py
app/app/error_reports/schemas/: error.py
app/app/excel/: router.py
app/app/excel/api/: excel.py
app/app/excel/services/: excel.py
app/app/jobs/celery/: __init__.py  celeryworker_pre_start.py  worker.py
app/app/jobs/set_data_fake/: example.env  image_data_base64.py  set_data_fake.py
app/app/models/: __init__.py  base.py  camera.py  event.py  image.py  parking.py  plate.py  price.py  record.py  user.py
app/app/notifications/: repo.py  router.py
app/app/parking/: models.py  repo.py  router.py
app/app/payment/: repo.py  router.py
app/app/plate/: repo.py  router.py
app/app/pricing/: api.py  models.py  repo.py  router.py  schemas.py  services.py
app/app/report/: repo.py  router.py
app/app/schemas/: __init__.py  camera.py  event.py  image.py  parking.py  plate.py  price.py  record.py  types.py
app/app/ticket/: repo.py  router.py
app/app/users/: api.py  models.py  repo.py
app/app/utils/: generate_excel.py  make_requests.py  message_codes.py  response.py  schedule.py  storage.py
app/cache/: __init__.py  cache.py  client.py  key_gen.py  redis.py  util.py
app/tests/: conftest.py
app/tests/crud/: test_image.py  test_parking.py  test_quipment.py  test_spot.py  test_user.py  test_zone.py
app/tests/utils/: utils.py
(+84 files in other folders)
