[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Kamran Abdi <kamranabdicse@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
gunicorn = "^21.2.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
SQLAlchemy = "^2.0.29"
celery = "^5.3.6"
fastapi = {version = "^0.110.1", extras = ["all"]}
python-jose = "^3.3.0"
passlib = "^1.7.4"
persiantools = "^4.0.0"
python-multipart = "^0.0.9"
tenacity = "^8.2.3"
rocketry = "^2.5.1"
fakeredis = "^2.21.3"
aioredis = "^2.0.1"
redis = "^5.0.3"
asyncpg = "^0.29.0"
pytz = "^2024.1"
pandas = "^2.2.1"
xlsxwriter = "^3.2.0"
openpyxl = "^3.1.2"
asgi-logger = "^0.1.0"
python-rapidjson = "^1.16"

[tool.poetry.dev-dependencies]
pytest="*"
black="*"
ruff="*"
isort="*"

[tool.black]
line-length = 79
exclude = '''
(
  .*versions/*
)
'''

[tool.ruff]
select = [
    "E",
    "W",
    "F",
    # "I",  # isort
    "C",
    "B",
]
ignore = [
    "E501",
    "B008",
]
exclude = ["versions"]
unfixable = ["E712", "B010"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"app/db/base.py" = ["F401"]

[tool.ruff.isort]
known-third-party = ["pydantic"]

[tool.isort]
profile = "black"
skip = ["versions"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
