[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Mohammad Sharif <mamadsh404@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
gunicorn = "^22.0.0"
fastapi = {extras = ["all"], version = "^0.111.0"}
pydantic = {extras = ["email"], version = "^2.7.1"}
alembic = "^1.13.1"
SQLAlchemy = "^2.0.30"
asyncpg = "^0.29.0"
python-multipart = "^0.0.9"
python-jose = "^3.3.0"
passlib = "^1.7.4"
celery = "^5.4.0"
persiantools = "^4.0.2"
tenacity = "^8.3.0"
fakeredis = "^2.23.1"
redis = "^5.0.4"
asgi-logger = "^0.1.0"
python-rapidjson = "^1.16"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.21.2"
pytest = "^8.2.0"
aiosqlite = "^0.20.0"
ruff = "^0.4.5"
black = "^24.4.2"
isort = "^5.13.2"

[tool.black]
line-length = 79
exclude = '''
(
  .*versions/*
)
'''

[tool.ruff]
select = [
    "E",
    "W",
    "F",
    # "I",  # isort
    "C",
    "B",
]
ignore = [
    "E501",
    "B008",
]
exclude = ["versions"]
unfixable = ["E712", "B010"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"app/db/base.py" = ["F401"]

[tool.ruff.isort]
known-third-party = ["pydantic"]

[tool.isort]
profile = "black"
skip = ["versions"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
